[libcxx] Add <namedarg> header

--- a/libcxx/include/module.modulemap.in
+++ b/libcxx/include/module.modulemap.in
@@ -1112,6 +1112,10 @@ module std [system] {
     header "mutex"
     export *
   }
+  module namedarg {
+    header "namedarg"
+    export *
+  }
   module new {
     header "new"
     export *
